# xodb

./: .gitignore
catalog/: build.gradle.kts
catalog/src/main/java/com/xodb/catalog/: CatalogApplication.java
catalog/src/main/java/com/xodb/catalog/controller/: CatalogController.java
catalog/src/main/java/com/xodb/catalog/dto/: ErrorResponseDto.java  FileInfoDto.java  SchemaDto.java  TableInfoDto.java
catalog/src/main/java/com/xodb/catalog/exception/: DBException.java  GlobalExceptionHandler.java  ResourceNotFoundException.java
catalog/src/main/java/com/xodb/catalog/repository/: TableInfoRepository.java
catalog/src/main/java/com/xodb/catalog/repository/impl/: TableInfoRepositoryImpl.java
catalog/src/main/java/com/xodb/catalog/service/: CatalogService.java
catalog/src/main/proto/com/xodb/catalog/: tableinfo.proto
catalog/src/main/resources/: application.yml
catalog/src/test/java/com/xodb/catalog/: CatalogApplicationTests.java
catalog/src/test/java/com/xodb/catalog/repository/impl/: TableInfoRepositoryImplTest.java
catalog/src/test/resources/: application.yml
execution-engine/: CMakeLists.txt
execution-engine/build_support/: packages.sh  run_clang_tidy.py
execution-engine/docs/: class-diagram.mdj
execution-engine/src/common/util/: string_util.cpp
execution-engine/src/execution/: pipeline.cpp
execution-engine/src/execution/executors/: filter_executor.cpp  sequential_scan_executor.cpp
execution-engine/src/include/client/: catalog_proxy.h  io_service_proxy.h
execution-engine/src/include/common/: config.h  defs.h  exception.h  hash_util.h  macros.h
execution-engine/src/include/common/concurrency/: future.h  worker_pool.h
execution-engine/src/include/common/data_structures/: linear_probe_hash_table.h
execution-engine/src/include/common/util/: string_util.h
execution-engine/src/include/data/: schema.h
execution-engine/src/include/data_model/: schema.h  table.h  table_index.h
execution-engine/src/include/execution/: execution_context.h  execution_engine.h  pipeline.h  primitive_repository.h
execution-engine/src/include/execution/executors/: abstract_executor.h  aggregate_executor.h  build_phase_hash_join_executor.h  executor.h  executor_factory.h  filter_executor.h  probe_phase_hash_join_executor.h  sequence_scan_executor.h  sequential_scan_executor.h
execution-engine/src/include/execution/operators/: exchange_operator.h
execution-engine/src/include/plan/: abstract_plan.h  aggregate_plan.h  filter_plan.h  hash_join_plan.h  plan.h  sequence_scan_plan.h  sequential_scan_plan.h
execution-engine/test/: CMakeLists.txt
execution-engine/test/backtrace/: crash_test.cpp
execution-engine/test/common/data_structures/: linear_probe_hash_table_test.cpp
execution-engine/test/execution/executors/: sequential_scan_executor_test.cpp
execution-engine/test/include/client/: mock_io_service.h
execution-engine/test/include/execution/: executor_test_util.h
io-service/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
io-service/build_support/: packages.sh
io-service/build_support/cmake/: grpc.cmake
io-service/src/buffer/: buffer_pool_manager.cpp
io-service/src/common/: config.cpp  io_service_instance.cpp
io-service/src/common/util/: arrow_file_util.cpp  string_util.cpp
io-service/src/include/app/: io_application.h
io-service/src/include/buffer/: buffer_pool_manager.h  lru_replacer.h  replacer.h
io-service/src/include/common/: concepts.h  config.h  exception.h  io_service_instance.h  macros.h
io-service/src/include/common/util/: arrow_file_util.h  string_util.h
io-service/src/include/controller/: io_controller.h
io-service/src/include/object_pool/: file_pool_manager.h  lru_replacer.h  object_pool_manager.h  replacer.h
io-service/src/include/service/: io_service.h
io-service/src/include/storage/: disk_cache_manager.h  file.h  file_loader.h  local_disk_file_loader.h  page.h  parquet_file.h  s3_file_loader.h
io-service/src/object_pool/: file_pool_manager.cpp
io-service/src/service/: io_service.cpp
io-service/src/storage/: local_file_loader.cpp
io-service/test/: CMakeLists.txt
io-service/test/backtrace/: crash_test.cpp
io-service/test/buffer/: buffer_pool_manager_test.cpp  lru_replacer_test.cpp
io-service/test/common/: arrow_file_util_test.cpp
io-service/test/controller/: io_controller_test.cpp
io-service/test/include/storage/: file_ultil_for_test.h  mock_s3_file_loader.h
io-service/test/object_pool/: file_pool_manager_test.cpp  lru_replacer_test.cpp  object_pool_manager_test.cpp
io-service/test/service/: io_service_test.cpp
io-service/test/storage/: local_disk_file_loader_test.cpp  mock_s3_file_loader.h
planner/: Cargo.toml
